update cluster swagger (#247)
